fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: scroll;
+    overflow: auto;
     list-style-position: outside;
     list-style: disc;
 }
